[iOS] Don't snapshot page loads occuring because of overscroll actions.

Snapshotting cancels in-progress overscroll animations, so page loads
that occur before the overscroll "bounce back" animation finishes will
cut that animation short.

Bug: 805165
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ifb105b79bbb700bca752000ebfb15f4123e90f38
Reviewed-on: https://chromium-review.googlesource.com/933586
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539320}
Former-commit-id: 902a6261bd189cdfb33a71d35c5127fd59f0d7de