ios/chrome/browser/snapshots/snapshot_tab_helper.mm
@@ -143,6 +143,10 @@ void SnapshotTabHelper::RemoveSnapshot() {
   [snapshot_generator_ removeSnapshot];
 }
 
+void SnapshotTabHelper::IgnoreNextLoad() {
+  ignore_next_load_ = true;
+}
+
 // static
 UIImage* SnapshotTabHelper::GetDefaultSnapshotImage() {
   return [SnapshotGenerator defaultSnapshotImage];
@@ -167,9 +171,11 @@ SnapshotTabHelper::SnapshotTabHelper(web::WebState* web_state,
 void SnapshotTabHelper::PageLoaded(
     web::WebState* web_state,
     web::PageLoadCompletionStatus load_completion_status) {
-  if (load_completion_status == web::PageLoadCompletionStatus::SUCCESS) {
+  if (!ignore_next_load_ &&
+      load_completion_status == web::PageLoadCompletionStatus::SUCCESS) {
     UpdateSnapshot(/*with_overlays=*/true, /*visible_frame_only=*/true);
   }
+  ignore_next_load_ = false;
 }
 
 void SnapshotTabHelper::WebStateDestroyed(web::WebState* web_state) {
